[package]
name = "tars-stream"
version = "0.0.1"
authors = ["zerolocust <zerolocust@gmail.com>"]
description = "for tars tup protocol decoding/encoding"
documentation = "TODO"
homepage = "https://github.com/zerolocusta/tars-stream"
license = "MIT"

[dependencies]
bytes = "0.4"
quick-error = "1.2.2"

[dev-dependencies]
uuid = { version = "0.6", features = ["v4"] }
rand = "0.5"